# dbus-mqtt-bridge

./: .gitignore  CHAT_RECORD.md  CMakeLists.txt  FINAL_REPORT.md  LICENSE  README.md  SETUP_PACKAGING.sh  cmake_output.txt  dbus-mqtt-bridge.conf  dbus-mqtt-bridge.service  fix-packaging-issues.sh  output.txt  secVal.txt  test-validation.sh  validate_packaging.sh
.github/: copilot-instructions.md
.zencoder/chats/1eb8254c-4157-4866-a2da-952960e45bb3/: plan.md  spec.md
cmake/: FindPahoMqttC.cmake
debian/: README.Debian  changelog  control  copyright  dbus-mqtt-bridge.postrm.debhelper  dbus-mqtt-bridge.substvars  debhelper-build-stamp  dirs  files  install  postinst  postrm  rules
docs/: user_guide.md
examples/: config.yaml  dbus-policy.conf
include/: Bridge.h  Bridge.hpp  CLI.h  Config.h  Config.hpp  ConfigGenerator.h  ConfigSearch.h  ConfigValidator.h  DbusIntrospector.h  DbusManager.h  DbusManager.hpp  InteractiveSelector.h  MqttManager.h  MqttManager.hpp  TypeUtils.h  Version.h.in
obj-x86_64-linux-gnu/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
obj-x86_64-linux-gnu/include/: Version.h
simulators/: dbus_simulator.cpp  mqtt_simulator.cpp
src/: Bridge.cpp  CLI.cpp  Config.cpp  ConfigGenerator.cpp  ConfigGenerator_Dbus.cpp  ConfigGenerator_Mappings.cpp  ConfigGenerator_Utils.cpp  ConfigSearch.cpp  ConfigValidator.cpp  DbusIntrospector.cpp  DbusManager.cpp  InteractiveSelector.cpp  MqttManager.cpp  main.cpp
test-configs/: empty-mappings.yaml  invalid-broker.yaml  invalid-bus-type.yaml  invalid-path.yaml  invalid-port.yaml  invalid-service.yaml  wildcard-publish.yaml  wildcard-subscribe.yaml
